syntax = "proto3";

option csharp_namespace = "PaymentService";


package pay;

service Payment {
	rpc Pay (PaymentRequest) returns (PaymentReply);
	rpc Donate (PaymentRequest) returns (PaymentReply);
}


message PaymentRequest {
	uint64 value = 1;
	string currency = 2;
	string userId = 3;
}

message PaymentReply {
	string id = 1;
	string msg = 2;
	uint64 value = 3;
	string currency = 4;
}